<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/module_base_share_bg_corner_12_top"
    android:paddingBottom="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:includeFontPadding="false"
            android:text="@string/module_base_make_order_choose_start_time"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="7dp"
            app:srcCompat="@drawable/module_base_dialog_close" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/day_recycle"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginTop="24dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="0dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/time_recycle"
            android:layout_width="match_parent"
            android:layout_height="300dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvDmCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/gray_888"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="12sp"
        android:text="@string/module_base_dm_appointment_count" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ok"
        style="@style/module_base_btn_style_day_mode"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:enabled="false"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:text="@string/ok" />

    <androidx.appcompat.widget.AppCompatButton
        android:visibility="gone"
        android:id="@+id/btFirstOrder"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        style="@style/module_base_btn_style_cancel"
        android:text="@string/module_base_first_order" />
</LinearLayout>